# -*- coding: utf-8 -*-
2008-08-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Fix HTTPS support.  Patch #21072 by
	Alex Arnell.

2008-07-11  Luis Lavena  <luislavena@gmail.com>

	* setup.rb: Properly build --destdir folder structure using Pathname.
	* test/mockgemui.rb: Fix warnings about instance variables in a module.

2008-07-02  Phil Hagelberg <technomancy@gmail.com>

	* lib/rubygems/defaults.rb: Add Gem.user_dir to use paths like
	~/.gem/ruby/1.8/gems and the like instead of just ~/.gem. Update
	remote fetcher and installer to use it.

2008-07-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Add #gem_home, #bin_dir for hooks.  Use
	DependencyInstaller's source_index so reinstallation via -i does not
	fail.
	* lib/rubygems/uninstaller.rb:  Add #gem_home, #bin_dir for hooks.
	* lib/rubygems/commands/query_command.rb:  Don't print LOCAL/REMOTE
	gems if stdout is not a TTY.
	* lib/rubygems/commands/query_command.rb:  Use the regexp we already
	have for `gem list --installed`.  Bug #20876 by Nick Hoffman.
	* lib/rubygems/commands/which_command.rb:  Clarify what `gem which` is
	for.

2008-06-30  Eric Hodel  <drbrain@segment7.net>

	* test/test_ext_configure_builder.rb:  Locale-free patch by Yusuke
	Endoh [ruby-core:17444].
	* lib/rubygems.rb:  Add pre/post (un)install hooks.
	* lib/rubygems/installer.rb:  Call pre/post install hooks as
	appropriate.
	* lib/rubygems/uninstaller.rb:  Call pre/post uninstall hooks as
	appropriate.  Minor refactoring of #uninstall.
	* lib/rubygems/package/tar_reader.rb:  Some OSs raise EINVAL on seek.
	Based on patch in bug #20791 by Neil Wilson.
	* lib/rubygems/specification.rb:  Correctly check for support of
	development dependencies for #to_ruby.  Bug #20778 by Evan Weaver.
	* lib/rubygems/spec_fetcher.rb:  Correctly load all cache file even if
	latest has been loaded.  Bug #20776 by Uwe Kubosch.

2008-06-25  Eric Hodel  <drbrain@segment7.net>
